Gradient Half Complete

--- a/index.html
+++ b/index.html
@@ -17,11 +17,21 @@
         </div>
 
         <h1>🎨 Generate a Random Color</h1>
-        <h3></h3>
+
+        <h3 id="heading1"></h3>
         <button id="generateBtn">Generate Color</button>
+        
         <div class="color-box" id="colorBox">
-            This is your new color
+            This is your solid color
         </div>
+
+        <h1>🎨 Generate a Random Color</h1>
+        <h3 id="heading2"></h3>
+        <button id="generategradientBtn">Generate Gradient Color</button>
+        <div class="color-box" id="GradientColorBox">
+            This is your gradient color
+        </div>
+
         <p class="footer">Made with 💙 by Azka</p>
     </div>
     <script src="app.js"></script>
