--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
 
         <h1>🎨 Generate a Random Color</h1>
 
-        <h3 id="heading1"></h3>
+        <h3></h3>
         <button id="generateBtn">Generate Color</button>
         
         <div class="color-box" id="colorBox">
             This is your solid color
         </div>
 
-        <h1>🎨 Generate a Random Color</h1>
-        <h3 id="heading2"></h3>
+        <h1>🎨 Generate a Gradient Random Color</h1>
         <button id="generategradientBtn">Generate Gradient Color</button>
         <div class="color-box" id="GradientColorBox">
             This is your gradient color
