--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Color Generator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="https://t3.ftcdn.net/jpg/04/18/60/42/360_F_418604207_rIQMeo3hhsNX9ARAk7MloG28tiG3WzhE.jpg" type="image/x-icon">
 </head>
 
 <body>
